2006-11-29  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/games.c (igraph_preference_game)
	(igraph_asymmetric_preference_game) : added
	* src/igraph.h : added new function declarations
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_Preference)
	(igraphmodule_Graph_Asymmetric_Preference) : added
	* interfaces/python/package/test/games.py : added test cases

2006-11-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_vs_vector_copy) : added
	* interfaces/python/src/convert.c
	(igraphmodule_PyObject_to_vs_t) : fixed a memory leak
	* src/flow.c (igraph_i_mincut_value_undirected) :
	fixed a memory leak
	* src/igraph.h : added igraph_st_mincut_value declaration
	* interfaces/python/src/graphobject.c : added some new functions

2006-11-24  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_neighborhood_size)
	(igraph_neighborhood, igraph_neighborhood_graphs) : added

2006-11-23  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/igraphmodule.c
	(igraphmodule_i_attribute_permute_edges) : added
	* interfaces/python/src/graphobject.c : now all functions expecting
	a vertex list accept a single vertex or a None object denoting all
	vertices
	* interfaces/python/src/old_test.py : now checks for proper attribute
	handling in Graph.to_directed

2006-11-22  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/convert.c (igraphmodule_PyObject_to_vs_t) :
	added
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_transitivity_undirected,
	igraphmodule_Graph_transitivity_local_undirected) : added
	* interfaces/python/src/test.py : modified to use the igraph.test
	package
	* interfaces/python/src/old_test.py : renamed from test.py

2006-11-21  Gabor Csardi  <csardi@kzoo.edu>

	* src/type_indexededgelist.c (igraph_delete_vertices) : rewritten

2006-11-19  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_transitivity) : removed