@@ -1,7 +1,6 @@
 
 o attribute support in to_undirected
 o calculate the actual maximum flow
-o average local transitivity.
 o find a way for writing equations in DocBook.
 o read and write non-structural info from/to GraphML files
   read:
