@@ -229,7 +229,8 @@ transitivity <- function(graph, type="undirected", vids=V(graph)) {
   }
   if (is.character(type)) {
     type <- switch(type, "undirected"=0, "global"=0, "globalundirected"=0,
-                   "localundirected"=1, "local"=1)
+                   "localundirected"=1, "local"=1, "average"=2,
+                   "localaverage"=2, "localaverageundirected"=2)
   }
   
   if (type==0) {
@@ -237,6 +238,9 @@ transitivity <- function(graph, type="undirected", vids=V(graph)) {
           PACKAGE="igraph")
   } else if (type==1) {
     .Call("R_igraph_transitivity_local_undirected", graph, as.numeric(vids),
+          PACKAGE="igraph")
+  } else if (type==2) {
+    .Call("R_igraph_transitivity_avglocal_undirected", graph,
           PACKAGE="igraph")
   }
 }
