@@ -2913,6 +2913,25 @@ SEXP R_igraph_transitivity_undirected(SEXP graph) {
   return result;
 }
 
+SEXP R_igraph_transitivity_avglocal_undirected(SEXP graph) {
+  
+  igraph_t g;
+  igraph_real_t res;
+  SEXP result;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  igraph_transitivity_avglocal_undirected(&g, &res);
+  PROTECT(result=NEW_NUMERIC(1));
+  REAL(result)[0]=res;
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
 SEXP R_igraph_transitivity_local_undirected(SEXP graph, SEXP pvids) {
   
   igraph_t g;
