@@ -127,10 +127,6 @@ typedef enum { IGRAPH_GET_ADJACENCY_UPPER=0,
 
 typedef enum { IGRAPH_DEGSEQ_SIMPLE=0 } igraph_degseq_t;
 
-typedef enum { IGRAPH_TRANSITIVITY_UNDIRECTED=0,
-               IGRAPH_TRANSITIVITY_LOCAL_UNDIRECTED } 
-                                            igraph_transitivity_type_t;
-
 typedef enum { IGRAPH_FILEFORMAT_EDGELIST=0,
 	       IGRAPH_FILEFORMAT_NCOL,
 	       IGRAPH_FILEFORMAT_PAJEK,
@@ -681,6 +677,8 @@ int igraph_transitivity_undirected(const igraph_t *graph,
 int igraph_transitivity_local_undirected(const igraph_t *graph, 
 					 igraph_vector_t *res,
 					 const igraph_vs_t vids);
+int igraph_transitivity_avglocal_undirected(const igraph_t *graph,
+					    igraph_real_t *res);
 int igraph_reciprocity(const igraph_t *graph, igraph_real_t *res,
 		       igraph_bool_t ignore_loops);
 
